<resources>
    <string name="app_name">MyHandNationalAssembly</string>
    <string name="main_fragment">Hello main fragment</string>

    <!--역대 국회의원-->
    <string name="members_info">국회의원\n정보</string>
    <string name="location">지역</string>
    <string name="party">소속정당</string>
    <string name="member_name">이름</string>
    <string name="member_party">소속정당</string>
    <string name="member_local">지역구</string>

    <string name="member_bill">발의법안</string>
    <string name="bill_activity">의정활동</string>
    <string name="schedule">의사/행사\n일정</string>
    <string name="report_budget">보고서</string>
    <string name="recent_bill">최근접수의안</string>
    <string name="proc_bill">처리의안</string>
    <string name="petition_proc_bill">청원처리현황</string>
    <string name="report">보고서</string>
    <string name="work_budget">업무추진비</string>
    <string name="member">국회의원</string>
    <string name="detail_info">상세정보</string>
    <string name="bill">의안</string>
    <string name="favorite">즐겨찾기</string>
    <string name="setting">설정</string>
    <string name="push_setting">알림설정</string>
    <string name="request_push">알림요청</string>
    <string name="national_website">국회사이트</string>
    <!--설정-->
    <string name="push_alarm">알림요청</string>
    <string name="setting_report_title">건의/오류제보</string>
    <string name="setting_idea_report">건의하기</string>
    <string name="setting_error_report">오류제보</string>
    <string name="open">열기</string>
    <string name="close">닫기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_member_name">이름으로 찾기</string>
    <string name="phone">전화번호</string>
    <string name="email">이메일</string>
    <string name="homepage">홈페이지</string>
    <string name="job_title">직책명</string>
    <string name="birth_date">생년월일</string>
    <string name="elec_local">선거구</string>
    <string name="elec_div">선거구구분</string>
    <string name="unit">당선</string>
    <string name="member_staff">보좌관</string>
    <string name="member_secretary">비서관</string>
    <string name="member_assem_address">사무실 호실</string>
    <string name="member_history">약력</string>
    <string name="no_search_data">해당하는 데이터가 없습니다.</string>
    <string name="date_time">일시</string>
    <string name="place">장소</string>
    <string name="title">제목</string>
    <string name="description">설명</string>
    <string name="proc_div">처리구분</string>
    <string name="major_content">주요내용</string>
    <string name="meeting_result">의결결과</string>
    <string name="date_proposed">제안일자</string>
    <string name="bill_title">의안명</string>
    <string name="report_title">자료명</string>
    <string name="reg_date">등록일자</string>
    <string name="nabo_issue_description"><![CDATA[NABO 재정동향 & 이슈는 주요 재정지표, 주요 재정이슈,외국의 재정동향 등 다양한 정보를 제공합니다.]]></string>
    <string name="nabo_issue_title">NABO 재정동향 이슈</string>
    <string name="nars_issue_title">국회입법조사처 연구보고서(이슈와 논점)</string>
    <string name="nars_issue_description">국회입법조사처 정치행정, 경제산업, 사회문화와 관련된 이슈와 논점 연구보고서 정보를 제공합니다.</string>
    <string name="library_research_title">국회도서관 정책연구용역 보고서</string>
    <string name="library_research_desc">국회도서관 정책연구용역 보고서 입니다.</string>
    <string name="find_bill_title">의안명으로 찾기</string>
    <string name="age">대수</string>
    <string name="proc_status">처리상태</string>
    <string name="proposer">제안자</string>
    <string name="co_proposer">공동발의자</string>

    <string-array name="location_array">
        <item></item>
        <item>강원</item>
        <item>경기</item>
        <item>경남</item>
        <item>경북</item>
        <item>전남</item>
        <item>전북</item>
        <item>충남</item>
        <item>충북</item>
        <item>제주</item>
    </string-array>
    <string-array name="party_array">
        <item></item>
        <item>더불어민주당</item>
        <item>기본소득당</item>
        <item>무소속</item>
        <item>정의당</item>
        <item>국민의힘</item>
        <item>시대전환</item>
    </string-array>

    <string-array name="age">
        <item>21</item>
        <item>20</item>
        <item>19</item>
    </string-array>
    <string-array name="proc_result">
        <item></item>
        <item>가결</item>
        <item>부결</item>
        <item>대안반영폐기</item>
        <item>폐기</item>
        <item>임기만료폐기</item>
        <item>철회</item>
        <item>계류</item>
    </string-array>

</resources>