<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/table_content_margin">

        <TableRow style="@style/BillTableRow">

            <TextView
                style="@style/BillTableTextTitle"
                android:text="@string/bill_title" />

            <TextView
                android:id="@+id/tv_bill_title"
                style="@style/BillTableTextContent"
                android:text="@string/bill_title" />
        </TableRow>

        <TableRow style="@style/BillTableRow">

            <TextView
                style="@style/BillTableTextTitle"
                android:text="@string/date_proposed" />

            <TextView
                android:id="@+id/tv_date_proposed"
                style="@style/BillTableTextContent"
                android:text="@string/date_proposed" />
        </TableRow>

        <TableRow style="@style/BillTableRow">

            <TextView
                style="@style/BillTableTextTitle"
                android:text="@string/meeting_result" />

            <TextView
                android:id="@+id/tv_meeting_result"
                style="@style/BillTableTextContent"
                android:text="@string/meeting_result" />
        </TableRow>


        <TableRow style="@style/BillTableRow">

            <TextView
                style="@style/BillTableTextTitle"
                android:text="@string/proposer" />

            <TextView
                android:id="@+id/tv_proposer"
                style="@style/BillTableTextContent"

                android:text="@string/proposer" />
        </TableRow>

        <TableRow style="@style/BillTableRow">

            <TextView
                style="@style/BillTableTextTitle"
                android:text="@string/co_proposer" />

            <TextView
                android:id="@+id/tv_co_proposer"
                style="@style/BillTableTextContent"

                android:text="@string/co_proposer" />
        </TableRow>
    </TableLayout>
</layout>