<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/background_grey"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/job_title" />

                <TextView
                    android:id="@+id/tvJobName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="895" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birth_date" />

                <TextView
                    android:id="@+id/tvBthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="863" />

            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/elec_local" />

                <TextView
                    android:id="@+id/tvOriLocalName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="834" />

            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/elec_div" />

                <TextView
                    android:id="@+id/tvElectLocalName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="820" />

            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unit" />

                <TextView
                    android:id="@+id/tvUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="817" />

            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/member_staff" />

                <TextView
                    android:id="@+id/tvStaff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="817" />

            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/member_secretary" />

                <TextView
                    android:id="@+id/tvSecretary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="사무실 호실" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/member_assem_address" />

                <TextView
                    android:id="@+id/tvAssemAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="사무실 호실" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    style="@style/TextViewCardHeader3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/member_history" />
            </TableRow>

            <TableRow android:padding="5dp">

                <TextView
                    android:id="@+id/tvMemHistory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:text="" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</layout>
