<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.member.BillSearchFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bill_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:hint="@string/find_bill_title"
                android:padding="10dp" />

            <ImageButton
                android:id="@+id/ib_bill_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/et_bill_search"
                android:layout_alignRight="@+id/et_bill_search"
                android:layout_alignBottom="@+id/et_bill_search"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_round_search"
                app:tint="@color/deep_grey" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <Spinner
                android:id="@+id/spinner_age"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proc_status" />

            <Spinner
                android:id="@+id/spinner_proc_result"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/white" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_bill_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/tv_no_data_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_search_data"
                android:visibility="gone" />
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>