<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.member.MemberSearchFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.myhand.nationalassembly.ui.viewmodel.MemberViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/frame_member"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_grey"
            android:orientation="vertical"
            android:padding="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_member_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/white"
                android:drawableEnd="@drawable/ic_baseline_search_24"
                android:hint="@string/find_member_name"
                android:padding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <Spinner
                    android:id="@+id/spinner_location"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/party" />

                <Spinner
                    android:id="@+id/spinner_party"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_member_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/progress_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewmodel.isLoading ? View.VISIBLE : View.GONE}" />
    </FrameLayout>
</layout>