<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.report.ReportFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.myhand.nationalassembly.ui.view.report.viewmodel.ReportBudgetViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="10dp">

                <TextView
                    android:id="@+id/tv_library_research_title"
                    style="@style/TextViewCardHeader1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"

                    android:text="@string/library_research_title" />

                <TextView
                    android:id="@+id/tv_libarary_research_desc"
                    style="@style/TextViewCardHeader4Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/library_research_desc" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_library_research"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rv_report_size"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/tv_issue_title"
                    style="@style/TextViewCardHeader1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/nars_issue_title" />

                <TextView
                    android:id="@+id/tv_issue_desc"
                    style="@style/TextViewCardHeader4Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="@string/nars_issue_description" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_nars_issue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rv_report_size"
                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/tv_nars_research_title"
                    style="@style/TextViewCardHeader1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="국회입법조사처 정책연구용역자료" />

                <TextView
                    android:id="@+id/tv_nars_research_desc"
                    style="@style/TextViewCardHeader4Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="국회입법조사처 정책연구용역자료 정보를 제공합니다." />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_nars_research"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rv_report_size"

                    android:orientation="horizontal" />

                <TextView
                    android:id="@+id/tv_nars_global_title"
                    style="@style/TextViewCardHeader1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="국회입법조사처 연구보고서(국제통계 동향과 분석)" />

                <TextView
                    android:id="@+id/tv_nars_global_desc"
                    style="@style/TextViewCardHeader4Normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:text="국회입법조사처 국제통계 동향과 분석 관련 연구보고서 정보를 제공합니다." />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_nars_global"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rv_report_size"
                    android:orientation="horizontal" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="@{viewmodel.isLoading ? View.VISIBLE : View.GONE}" />


        </FrameLayout>

    </ScrollView>

</layout>